# pico_example

./: .gitignore  CMakeLists.txt
include/mpu6050/: mpu6050.h
scripts/: 2d_live.py  calibrate.py  calibrate_chatgpt.py  clean_chatgpt.py  cleaned_data.txt  data.txt  data_acquire.py  out.txt  python_visualize.py
src/: main.c
src/i2c/: busscan.c
src/mpu6050/: mpu6050.cpp
